Fix for Calendar toolbar wrapping on Firefox at 1024 width
git-svn-id: https://svn.alfresco.com/repos/alfresco-open-mirror/alfresco/HEAD@10714 7033f55c-6c29-4ad8-afba-765cb616e738

Former-commit-id: 3bbb7d8b50a0d3eb27fedc3a1e415a957e9d28d4

--- a/root/projects/slingshot/source/web/components/calendar/toolbar.css
+++ b/root/projects/slingshot/source/web/components/calendar/toolbar.css
@@ -18,6 +18,11 @@
    background: url(images/add-event-16.png) no-repeat 10% 50%;
 }
 
+.toolbar div.first
+{
+   width: auto;
+}
+
 .toolbar .first div 
 {
    float: left;
